internal/assembly/grammar/assembler_parser.go
// Code generated from Assembler.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // Assembler
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AssemblerParser struct {
	*antlr.BaseParser
}

var AssemblerParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func assemblerParserInit() {
	staticData := &AssemblerParserStaticData
	staticData.LiteralNames = []string{
		"", "':'", "','", "'['", "']'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "ENTRY", "SECTION", "DB", "DW", "EQU", "DOT_DATA",
		"DOT_CODE", "MOV", "ADD_I", "SUB_I", "MUL_I", "DIV_I", "ADD_F", "SUB_F",
		"MUL_F", "DIV_F", "CMP_I", "CMP_F", "JMP", "JZ", "JNZ", "JC", "JNC",
		"CALL", "RET", "PUSH", "POP", "IN", "OUT", "AND", "OR", "XOR", "NOT",
		"SHL", "SHR", "HALT", "HEX_LITERAL", "BIN_LITERAL", "DEC_LITERAL", "IDENTIFIER",
		"LINE_COMMENT", "BLOCK_COMMENT", "WS", "EOL",
	}
	staticData.RuleNames = []string{
		"program", "directive", "entryDirective", "sectionDirective", "dataDirective",
		"equDirective", "instruction", "label", "mnemonic", "operand", "indirectAddress",
		"constant", "number", "labelName", "sectionName", "comment", "emptyLine",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AssemblerParserInit initializes any static state used to implement AssemblerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAssemblerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AssemblerParserInit() {
	staticData := &AssemblerParserStaticData
	staticData.once.Do(assemblerParserInit)
}

// NewAssemblerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAssemblerParser(input antlr.TokenStream) *AssemblerParser {
	AssemblerParserInit()
	this := new(AssemblerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &AssemblerParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Assembler.g4"

	return this
}

// AssemblerParser tokens.
const (
	AssemblerParserEOF           = antlr.TokenEOF
	AssemblerParserT__0          = 1
	AssemblerParserT__1          = 2
	AssemblerParserT__2          = 3
	AssemblerParserT__3          = 4
	AssemblerParserENTRY         = 5
	AssemblerParserSECTION       = 6
	AssemblerParserDB            = 7
	AssemblerParserDW            = 8
	AssemblerParserEQU           = 9
	AssemblerParserDOT_DATA      = 10
	AssemblerParserDOT_CODE      = 11
	AssemblerParserMOV           = 12
	AssemblerParserADD_I         = 13
	AssemblerParserSUB_I         = 14
	AssemblerParserMUL_I         = 15
	AssemblerParserDIV_I         = 16
	AssemblerParserADD_F         = 17
	AssemblerParserSUB_F         = 18
	AssemblerParserMUL_F         = 19
	AssemblerParserDIV_F         = 20
	AssemblerParserCMP_I         = 21
	AssemblerParserCMP_F         = 22
	AssemblerParserJMP           = 23
	AssemblerParserJZ            = 24
	AssemblerParserJNZ           = 25
	AssemblerParserJC            = 26
	AssemblerParserJNC           = 27
	AssemblerParserCALL          = 28
	AssemblerParserRET           = 29
	AssemblerParserPUSH          = 30
	AssemblerParserPOP           = 31
	AssemblerParserIN            = 32
	AssemblerParserOUT           = 33
	AssemblerParserAND           = 34
	AssemblerParserOR            = 35
	AssemblerParserXOR           = 36
	AssemblerParserNOT           = 37
	AssemblerParserSHL           = 38
	AssemblerParserSHR           = 39
	AssemblerParserHALT          = 40
	AssemblerParserHEX_LITERAL   = 41
	AssemblerParserBIN_LITERAL   = 42
	AssemblerParserDEC_LITERAL   = 43
	AssemblerParserIDENTIFIER    = 44
	AssemblerParserLINE_COMMENT  = 45
	AssemblerParserBLOCK_COMMENT = 46
	AssemblerParserWS            = 47
	AssemblerParserEOL           = 48
)

// AssemblerParser rules.
const (
	AssemblerParserRULE_program          = 0
	AssemblerParserRULE_directive        = 1
	AssemblerParserRULE_entryDirective   = 2
	AssemblerParserRULE_sectionDirective = 3
	AssemblerParserRULE_dataDirective    = 4
	AssemblerParserRULE_equDirective     = 5
	AssemblerParserRULE_instruction      = 6
	AssemblerParserRULE_label            = 7
	AssemblerParserRULE_mnemonic         = 8
	AssemblerParserRULE_operand          = 9
	AssemblerParserRULE_indirectAddress  = 10
	AssemblerParserRULE_constant         = 11
	AssemblerParserRULE_number           = 12
	AssemblerParserRULE_labelName        = 13
	AssemblerParserRULE_sectionName      = 14
	AssemblerParserRULE_comment          = 15
	AssemblerParserRULE_emptyLine        = 16
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDirective() []IDirectiveContext
	Directive(i int) IDirectiveContext
	AllLabel() []ILabelContext
	Label(i int) ILabelContext
	AllInstruction() []IInstructionContext
	Instruction(i int) IInstructionContext
	AllComment() []ICommentContext
	Comment(i int) ICommentContext
	AllEmptyLine() []IEmptyLineContext
	EmptyLine(i int) IEmptyLineContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(AssemblerParserEOF, 0)
}

func (s *ProgramContext) AllDirective() []IDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDirectiveContext); ok {
			tst[i] = t.(IDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Directive(i int) IDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDirectiveContext)
}

func (s *ProgramContext) AllLabel() []ILabelContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILabelContext); ok {
			len++
		}
	}

	tst := make([]ILabelContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILabelContext); ok {
			tst[i] = t.(ILabelContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Label(i int) ILabelContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *ProgramContext) AllInstruction() []IInstructionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInstructionContext); ok {
			len++
		}
	}

	tst := make([]IInstructionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInstructionContext); ok {
			tst[i] = t.(IInstructionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Instruction(i int) IInstructionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *ProgramContext) AllComment() []ICommentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommentContext); ok {
			len++
		}
	}

	tst := make([]ICommentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommentContext); ok {
			tst[i] = t.(ICommentContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Comment(i int) ICommentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommentContext)
}

func (s *ProgramContext) AllEmptyLine() []IEmptyLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEmptyLineContext); ok {
			len++
		}
	}

	tst := make([]IEmptyLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEmptyLineContext); ok {
			tst[i] = t.(IEmptyLineContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) EmptyLine(i int) IEmptyLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEmptyLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEmptyLineContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *AssemblerParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AssemblerParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&547556790628832) != 0 {
		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(34)
				p.Directive()
			}

		case 2:
			{
				p.SetState(35)
				p.Label()
			}

		case 3:
			{
				p.SetState(36)
				p.Instruction()
			}

		case 4:
			{
				p.SetState(37)
				p.Comment()
			}

		case 5:
			{
				p.SetState(38)
				p.EmptyLine()
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(43)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(44)
		p.Match(AssemblerParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDirectiveContext is an interface to support dynamic dispatch.
type IDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EntryDirective() IEntryDirectiveContext
	SectionDirective() ISectionDirectiveContext
	DataDirective() IDataDirectiveContext
	EquDirective() IEquDirectiveContext

	// IsDirectiveContext differentiates from other interfaces.
	IsDirectiveContext()
}

type DirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDirectiveContext() *DirectiveContext {
	var p = new(DirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_directive
	return p
}

func InitEmptyDirectiveContext(p *DirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_directive
}

func (*DirectiveContext) IsDirectiveContext() {}

func NewDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DirectiveContext {
	var p = new(DirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_directive

	return p
}

func (s *DirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *DirectiveContext) EntryDirective() IEntryDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEntryDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEntryDirectiveContext)
}

func (s *DirectiveContext) SectionDirective() ISectionDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISectionDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISectionDirectiveContext)
}

func (s *DirectiveContext) DataDirective() IDataDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDataDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDataDirectiveContext)
}

func (s *DirectiveContext) EquDirective() IEquDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEquDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEquDirectiveContext)
}

func (s *DirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DirectiveContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.EnterDirective(s)
	}
}

func (s *DirectiveContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.ExitDirective(s)
	}
}

func (p *AssemblerParser) Directive() (localctx IDirectiveContext) {
	localctx = NewDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AssemblerParserRULE_directive)
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(46)
			p.EntryDirective()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(47)
			p.SectionDirective()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(48)
			p.DataDirective()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(49)
			p.EquDirective()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEntryDirectiveContext is an interface to support dynamic dispatch.
type IEntryDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ENTRY() antlr.TerminalNode
	LabelName() ILabelNameContext
	WS() antlr.TerminalNode

	// IsEntryDirectiveContext differentiates from other interfaces.
	IsEntryDirectiveContext()
}

type EntryDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEntryDirectiveContext() *EntryDirectiveContext {
	var p = new(EntryDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_entryDirective
	return p
}

func InitEmptyEntryDirectiveContext(p *EntryDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_entryDirective
}

func (*EntryDirectiveContext) IsEntryDirectiveContext() {}

func NewEntryDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EntryDirectiveContext {
	var p = new(EntryDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_entryDirective

	return p
}

func (s *EntryDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *EntryDirectiveContext) ENTRY() antlr.TerminalNode {
	return s.GetToken(AssemblerParserENTRY, 0)
}

func (s *EntryDirectiveContext) LabelName() ILabelNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelNameContext)
}

func (s *EntryDirectiveContext) WS() antlr.TerminalNode {
	return s.GetToken(AssemblerParserWS, 0)
}

func (s *EntryDirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EntryDirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EntryDirectiveContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.EnterEntryDirective(s)
	}
}

func (s *EntryDirectiveContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.ExitEntryDirective(s)
	}
}

func (p *AssemblerParser) EntryDirective() (localctx IEntryDirectiveContext) {
	localctx = NewEntryDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AssemblerParserRULE_entryDirective)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(AssemblerParserENTRY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == AssemblerParserWS {
		{
			p.SetState(53)
			p.Match(AssemblerParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(56)
		p.LabelName()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISectionDirectiveContext is an interface to support dynamic dispatch.
type ISectionDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SECTION() antlr.TerminalNode
	SectionName() ISectionNameContext
	WS() antlr.TerminalNode

	// IsSectionDirectiveContext differentiates from other interfaces.
	IsSectionDirectiveContext()
}

type SectionDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySectionDirectiveContext() *SectionDirectiveContext {
	var p = new(SectionDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_sectionDirective
	return p
}

func InitEmptySectionDirectiveContext(p *SectionDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_sectionDirective
}

func (*SectionDirectiveContext) IsSectionDirectiveContext() {}

func NewSectionDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SectionDirectiveContext {
	var p = new(SectionDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_sectionDirective

	return p
}

func (s *SectionDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *SectionDirectiveContext) SECTION() antlr.TerminalNode {
	return s.GetToken(AssemblerParserSECTION, 0)
}

func (s *SectionDirectiveContext) SectionName() ISectionNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISectionNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISectionNameContext)
}

func (s *SectionDirectiveContext) WS() antlr.TerminalNode {
	return s.GetToken(AssemblerParserWS, 0)
}

func (s *SectionDirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SectionDirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SectionDirectiveContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.EnterSectionDirective(s)
	}
}

func (s *SectionDirectiveContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblerListener); ok {
		listenerT.ExitSectionDirective(s)
	}
}

func (p *AssemblerParser) SectionDirective() (localctx ISectionDirectiveContext) {
	localctx = NewSectionDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AssemblerParserRULE_sectionDirective)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(AssemblerParserSECTION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == AssemblerParserWS {
		{
			p.SetState(59)
			p.Match(AssemblerParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(62)
		p.SectionName()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDataDirectiveContext is an interface to support dynamic dispatch.
type IDataDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllConstant() []IConstantContext
	Constant(i int) IConstantContext
	DB() antlr.TerminalNode
	DW() antlr.TerminalNode
	LabelName() ILabelNameContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode

	// IsDataDirectiveContext differentiates from other interfaces.
	IsDataDirectiveContext()
}

type DataDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDataDirectiveContext() *DataDirectiveContext {
	var p = new(DataDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_dataDirective
	return p
}

func InitEmptyDataDirectiveContext(p *DataDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_dataDirective
}

func (*DataDirectiveContext) IsDataDirectiveContext() {}

func NewDataDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DataDirectiveContext {
	var p = new(DataDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_dataDirective

	return p
}

func (s *DataDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *DataDirectiveContext) AllConstant() []IConstantContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstantContext); ok {
			len++
		}
	}

	tst := make([]IConstantContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstantContext); ok {
			tst[i] = t.(IConstantContext)
			i++
		}
	}

	return tst
}
